# BreakGen

./: .env.example  .gitignore  Makefile  PRODUCT_SPEC.md  README.md
.claude/: settings.json
client/: index.html  package.json  pnpm-lock.yaml
client/src/: App.tsx  index.css  main.tsx
client/src/components/ExportPanel/: ExportPanel.tsx
client/src/lib/: api.ts
client/src/pages/: Auth.tsx  Landing.tsx  ProjectList.tsx
client/src/stores/: authStore.ts  projectStore.ts
client/src/types/: project.ts
docker/: Dockerfile  docker-compose.yml
docs/: API_AND_JOBS.md  CURRENT_STATE.md  FRONTEND_ARCHITECTURE.md  GAP_ANALYSIS.md  LOOPHOLES_AUDIT.md  PLATFORM_EXPANSION_PLAN.md
server/: README.md  config.py  main.py  pyproject.toml
server/ai/: meshy_client.py  prompt_wrapper.py
server/api/: auth.py  export.py  generation.py  geometry.py  pcb.py  projects.py  switches.py  templates.py
server/db/: database.py  models.py
server/eda/: matrix_compiler.py
server/export/: bundler.py
server/firmware/: qmk_generator.py
server/geometry/: case_generator.py  mesh_processor.py  plate_generator.py
server/models/: __init__.py  manifest_schema.py  product_adapter.py  project.py  supported_configs.py  validation_schema.py
server/templates/: 60_percent.json  65_percent.json  75_percent.json  macropad_3x3.json  macropad_4x4.json  midi_25key.json  streamdeck_2x3.json  streamdeck_3x5.json
server/tests/: test_export.py  test_firmware.py  test_matrix.py  test_models.py  test_plate.py  test_products.py  test_validation.py
server/validation/: engine.py
(+11 files in other folders)
