[project]
name = "breakgen-server"
version = "0.1.0"
description = "BreakGen backend — keyboard intent compiler"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "aiosqlite>=0.20.0",
    "python-multipart>=0.0.12",
    "greenlet>=3.3.2",
    "ezdxf>=1.4.3",
    "trimesh>=4.11.5",
    "numpy>=2.4.4",
    "httpx>=0.28.1",
    "pyjwt>=2.12.1",
    "passlib[bcrypt]>=1.7.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
